compiler/testData/diagnostics/tests/qualifiedExpression/nullCalleeExpression.kt
// NI_EXPECTED_FILE
// COMPARE_WITH_LIGHT_TREE

val unwrapped = <!UNRESOLVED_REFERENCE!>some<!>.<!SYNTAX!><<!><!DEBUG_INFO_MISSING_UNRESOLVED!>cabc<!><!SYNTAX!>$Wrapper<!><out <!DEBUG_INFO_MISSING_UNRESOLVED!>Any<!>>::<!DEBUG_INFO_MISSING_UNRESOLVED!>unwrap<!>
